--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
                         <li><a href='diff_huub66_test.html'>Unified diff core:dev vs beta:origin/huub66_test</a></li>
 
+                        <li><a href='diff_improve.html'>Unified diff core:dev vs beta:origin/improve</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_mem-fix.html'>Unified diff core:dev vs beta:origin/mem-fix</a></li>
