--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
                         <li><a href='diff_huub66_test.html'>Unified diff core:dev vs beta:origin/huub66_test</a></li>
 
-                        <li><a href='diff_improve.html'>Unified diff core:dev vs beta:origin/improve</a></li>
-
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_mem-fix.html'>Unified diff core:dev vs beta:origin/mem-fix</a></li>
 
                         <li><a href='diff_p1-3ph.html'>Unified diff core:dev vs beta:origin/p1-3ph</a></li>
+
+                        <li><a href='diff_pre-commit.html'>Unified diff core:dev vs beta:origin/pre-commit</a></li>
 
                         <li><a href='diff_pw_0_25_13.html'>Unified diff core:dev vs beta:origin/pw_0_25_13</a></li>
 
