Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
 
+                        <li><a href='diff_fix-usb-request-queue.html'>Unified diff core:dev vs beta:origin/fix-usb-request-queue</a></li>
+
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
 
                         <li><a href='diff_hassfest.html'>Unified diff core:dev vs beta:origin/hassfest</a></li>
