--- a/diff_DOMAIN_to_Platform.html
+++ b/diff_DOMAIN_to_Platform.html
@@ -21789,7 +21789,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>UnitOfTime</ins>,</span>
+            <span class="d2h-code-line-ctn">    <ins>UnitOfVolume</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -21800,7 +21800,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>UnitOfVolume</ins>,</span>
+            <span class="d2h-code-line-ctn">    <ins>UnitOfVolumeFlowRate</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -25441,7 +25441,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        native_unit_of_measurement=f&quot;{UnitOfVolume.CUBIC_METERS}&#x2F;{UnitOfTime.HOURS}&quot;,</span>
+            <span class="d2h-code-line-ctn">        native_unit_of_measurement=UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR,</span>
         </div>
     </td>
 </tr><tr>
