--- a/diff_device_availability.html
+++ b/diff_device_availability.html
@@ -21278,7 +21278,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfTime,</span>
+            <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
         </div>
     </td>
 </tr><tr>
@@ -21289,7 +21289,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
+            <span class="d2h-code-line-ctn">    UnitOfVolumeFlowRate,</span>
         </div>
     </td>
 </tr><tr>
@@ -24600,7 +24600,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        native_unit_of_measurement=f&quot;{UnitOfVolume.CUBIC_METERS}&#x2F;{UnitOfTime.HOURS}&quot;,</span>
+            <span class="d2h-code-line-ctn">        native_unit_of_measurement=UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR,</span>
         </div>
     </td>
 </tr><tr>
