--- a/diff_test-typing.html
+++ b/diff_test-typing.html
@@ -19205,7 +19205,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfTime,</span>
+            <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
         </div>
     </td>
 </tr><tr>
@@ -19216,7 +19216,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
+            <span class="d2h-code-line-ctn">    UnitOfVolumeFlowRate,</span>
         </div>
     </td>
 </tr><tr>
@@ -22527,7 +22527,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        native_unit_of_measurement=f&quot;{UnitOfVolume.CUBIC_METERS}&#x2F;{UnitOfTime.HOURS}&quot;,</span>
+            <span class="d2h-code-line-ctn">        native_unit_of_measurement=UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR,</span>
         </div>
     </td>
 </tr><tr>
