Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
 
+                        <li><a href='diff_elga_test.html'>Unified diff core:dev vs beta:origin/elga_test</a></li>
+
                         <li><a href='diff_fix-usb-request-queue.html'>Unified diff core:dev vs beta:origin/fix-usb-request-queue</a></li>
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
@@ -52,9 +54,13 @@
 
                         <li><a href='diff_pre-commit.html'>Unified diff core:dev vs beta:origin/pre-commit</a></li>
 
+                        <li><a href='diff_pre-commit-ci.html'>Unified diff core:dev vs beta:origin/pre-commit-ci</a></li>
+
                         <li><a href='diff_pw_0_25_13.html'>Unified diff core:dev vs beta:origin/pw_0_25_13</a></li>
 
                         <li><a href='diff_pw_25_5.html'>Unified diff core:dev vs beta:origin/pw_25_5</a></li>
+
+                        <li><a href='diff_py311.html'>Unified diff core:dev vs beta:origin/py311</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
