--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_cf_reauth.html'>Unified diff core:dev vs beta:origin/cf_reauth</a></li>
 
+                        <li><a href='diff_core-progress-1.html'>Unified diff core:dev vs beta:origin/core-progress-1</a></li>
+
                         <li><a href='diff_core_75905.html'>Unified diff core:dev vs beta:origin/core_75905</a></li>
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
