Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_core-progress-1.html'>Unified diff core:dev vs beta:origin/core-progress-1</a></li>
 
+                        <li><a href='diff_core-progress-1a.html'>Unified diff core:dev vs beta:origin/core-progress-1a</a></li>
+
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
 
                         <li><a href='diff_elga_test.html'>Unified diff core:dev vs beta:origin/elga_test</a></li>
@@ -29,6 +31,8 @@
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_mem-fix.html'>Unified diff core:dev vs beta:origin/mem-fix</a></li>
+
+                        <li><a href='diff_pre-commit-ci-update-config.html'>Unified diff core:dev vs beta:origin/pre-commit-ci-update-config</a></li>
 
                         <li><a href='diff_test-typing.html'>Unified diff core:dev vs beta:origin/test-typing</a></li>
 
