Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 
                         <li><a href='diff_core-progress-1a.html'>Unified diff core:dev vs beta:origin/core-progress-1a</a></li>
 
+                        <li><a href='diff_dependabot/github_actions/actions/checkout-3.5.0.html'>Unified diff core:dev vs beta:origin/dependabot/github_actions/actions/checkout-3.5.0</a></li>
+
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
 
                         <li><a href='diff_elga_test.html'>Unified diff core:dev vs beta:origin/elga_test</a></li>
 
                         <li><a href='diff_fix-usb-request-queue.html'>Unified diff core:dev vs beta:origin/fix-usb-request-queue</a></li>
+
+                        <li><a href='diff_flake8_2_ruff.html'>Unified diff core:dev vs beta:origin/flake8_2_ruff</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
