--- a/diff_main.html
+++ b/diff_main.html
@@ -26216,7 +26216,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from typing import Any, TypeVar</span>
+            <span class="d2h-code-line-ctn">from typing import Any, Concatenate, TypeVar</span>
         </div>
     </td>
 </tr><tr>
@@ -26227,7 +26227,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from typing import Any, <ins>Concatenate, ParamSpec, </ins>TypeVar</span>
+            <span class="d2h-code-line-ctn">from typing import Any, Concatenate, <ins>ParamSpec, </ins>TypeVar</span>
         </div>
     </td>
 </tr><tr>
@@ -26249,7 +26249,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from <del>typing_extensions</del> import <del>Concatenate, ParamSpec</del></span>
+            <span class="d2h-code-line-ctn">from <del>typing_extensions</del> import <del>ParamSpec</del></span>
         </div>
     </td>
 </tr><tr>
