--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
                         <li><a href='diff_mem-fix.html'>Unified diff core:dev vs beta:origin/mem-fix</a></li>
 
+                        <li><a href='diff_stick_meas.html'>Unified diff core:dev vs beta:origin/stick_meas</a></li>
+
                         <li><a href='diff_test-typing.html'>Unified diff core:dev vs beta:origin/test-typing</a></li>
 
                 </ul>
