Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_core-progress-1a.html'>Unified diff core:dev vs beta:origin/core-progress-1a</a></li>
 
+                        <li><a href='diff_core-prs.html'>Unified diff core:dev vs beta:origin/core-prs</a></li>
+
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
 
                         <li><a href='diff_elga_test.html'>Unified diff core:dev vs beta:origin/elga_test</a></li>
